Closing an untitled document doesn't close it

A request close signal has been implemented in order for
the document grid to decide whether it should close the document.

The signal is catched and if the document has no changes
we close the view else we popup a save / cancel dialog.

https://bugzilla.gnome.org/show_bug.cgi?id=742698